# my-dev-dock

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PROMPT.IA  README.md  package.json  release.config.cjs  tsconfig.json  vite.config.ts
.cursor/skills/dev-hub-visual-themes/: SKILL.md  THEME-SPECS.md
.github/workflows/: release.yml  tauri-artifacts.yml
docs/: 00-ai-brief.md  01-project-overview.md  02-architecture.md  03-monorepo-structure.md  04-tech-stack.md  05-frontend-guide.md  06-backend-guide.md  07-design-system.md  08-data-models.md  09-development-guide.md  10-conventions.md  README.md
docs/homebrew/: HOMEBREW_CASK_PR_CHECKLIST.md  README.md
docs/homebrew/Casks/: mydevdock.rb
scripts/: sync-version.mjs
scripts/release/: update-homebrew-cask.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: app.tsx
src/app/i18n/: i18n.ts
src/app/layouts/: MainLayout.tsx
src/app/pages/: DashboardPage.tsx  SettingsWindowPage.tsx
src/app/store/: use-active-workspace-store.ts  use-env-index-drawer-store.ts  use-env-index-store.ts  use-locale-store.ts  use-project-store.ts  use-settings-drawer-store.ts  use-ui-theme-store.ts  use-workspace-panel-store.ts
src/lib/: env-index-utils.ts  models.ts  project-sort.ts  tauri-multi-window-sync.ts  ui-theme.ts  workspace-suggestions.ts
src/lib/glass-card/: glass-card.tsx
src/lib/glow-badge/: glow-badge.tsx
src/lib/neon-button/: neon-button.tsx
src/lib/search-input/: search-input.tsx
(+40 files in other folders)
