[package]
name = "dev-hub-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["Luis Eduardo Farfán Melgar"]
edition = "2021"

[lib]
name = "dev_hub_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
open = "5.0"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
